<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/e_2_e_orders"
        android:title="@string/my_orders" />


    <item
        android:id="@+id/navigation_call"
        android:icon="@drawable/ic_baseline_phone_in_talk_24"
        android:title="@string/title_call" />


    <item
        android:id="@+id/navigation_accounts"
        android:icon="@drawable/ic_e_2_e_account"
        android:title="@string/title_account" />

    <item
        android:id="@+id/navigation_cart"
        android:icon="@drawable/ic_shopping_cart_white_24dp"
        android:iconTint="@color/black"
        android:title="@string/my_cart" />

</menu>