<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginBottom="@dimen/_40dp"
    android:background="@drawable/loginscreen"
    tools:context=".activity.ProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"

            android:layout_height="200dp"
            >


            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:visibility="invisible"
                android:background="@android:color/transparent"
                app:navigationIcon="@drawable/ic_baseline_west_24"
                >

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:text="@string/edit_profile"
                        android:textColor="@color/white"
                        android:layout_centerVertical="true"
                        style="@style/TextAppearance.AppCompat.Title"
                        />

                    <ImageView
                        android:id="@+id/iv_filter"
                        android:layout_width="@dimen/_30dp"
                        android:layout_height="@dimen/_30dp"
                        android:src="@drawable/ic_baseline_check_24"
                        android:backgroundTint="@color/white"
                        android:tint="@color/white"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="@dimen/_10dp"
                        android:layout_alignParentRight="true" />


                </RelativeLayout>




            </androidx.appcompat.widget.Toolbar>

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profile_image"
                    android:layout_width="@dimen/_90dp"
                    android:layout_height="@dimen/_90dp"

                    />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/iv_camera"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_camera"
                    android:layout_gravity="bottom|right"

                    />



            </FrameLayout>



        </RelativeLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_margin="@dimen/_10dp"
            android:background="@color/white"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tv_fiest_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:hint="@string/first_name"
                android:text=""
                android:inputType="text"
                android:textColorHint="@color/text_green"
                android:textSize="@dimen/_16dp" />


        </com.google.android.material.textfield.TextInputLayout>



        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_margin="@dimen/_10dp"

            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tv_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/text_green"
                android:background="@color/white"
                android:hint="@string/last_name"
                android:text=""
                android:inputType="text"
                android:textSize="@dimen/_16dp"
                />


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_margin="@dimen/_10dp"
            android:visibility="gone"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tv_email"
                android:layout_width="match_parent"
                android:background="@color/white"
                android:enabled="false"
                android:layout_height="wrap_content"
                android:textColorHint="@color/text_green"
                android:hint="@string/email_address"

                android:textSize="@dimen/_16dp"
                />


        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_margin="@dimen/_10dp"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tv_amobile"
                android:layout_width="match_parent"
                android:background="@color/white"
                android:enabled="false"
                android:inputType="number"
                android:ems="10"
                android:layout_height="wrap_content"
                android:textColorHint="@color/text_green"
                android:hint="@string/mobile"
                android:text=""

                android:textSize="@dimen/_16dp"
                />


        </com.google.android.material.textfield.TextInputLayout>





        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_margin="@dimen/_10dp"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tv_address"
                android:layout_width="match_parent"
                android:background="@color/white"
                android:layout_height="wrap_content"
                android:textColorHint="@color/text_green"
                android:hint="@string/address"
                android:text=""
                android:inputType="text"
                android:textSize="@dimen/_16dp"
                />


        </com.google.android.material.textfield.TextInputLayout>



        <TextView
            android:id="@+id/tv_mobile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_16dp"
            android:text="@string/mobile_val"
            android:visibility="gone"
            android:textColor="@color/text_green"
            android:drawablePadding="@dimen/_10dp"
            android:drawableRight="@drawable/ic_edit_icon"
            android:fontFamily="@font/raleway_semibold" />



        <Button
            android:id="@+id/id_updateprofile"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50dp"
            android:layout_marginVertical="@dimen/_10dp"
            android:fontFamily="@font/montserrat_extralight"
            android:text="@string/update_profile"
            android:layout_marginBottom="@dimen/_20dp"
            android:layout_marginHorizontal="@dimen/_20dp"
            />



    </LinearLayout>



</androidx.core.widget.NestedScrollView>