<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/loginscreen"
    tools:context=".Activities.ContactUsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:overScrollMode="never">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="0dp"
                    android:layout_marginEnd="0dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="0dp"
                    android:orientation="vertical"
                    android:gravity="center_horizontal">

                    <TextView
                        android:text="@string/call_us"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <Button
                        android:text="@string/call"
                        android:onClick="CallonNumber"
                        android:textColor="@color/white"
                        android:drawableTint="@color/white"
                        android:drawableStart="@drawable/ic_call_black_24dp"
                        android:background="@drawable/abc_bg_4"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:layout_margin="10dp"
                        android:layout_marginBottom="0dp"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:layout_marginStart="40dp"
                    android:layout_marginEnd="40dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="0.5dp"
                            android:layout_centerInParent="true"
                            android:background="@color/colorSkinBGDivider"/>

                        <TextView
                            android:text="OR"
                            android:gravity="center"
                            android:textSize="8sp"
                            android:fontFamily="sans-serif-light"
                            android:background="@drawable/abc_bg_5"
                            android:layout_centerInParent="true"
                            android:layout_width="24dp"
                            android:layout_height="24dp" />
                    </RelativeLayout>

                </LinearLayout>

                <LinearLayout
                    android:focusableInTouchMode="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:text="@string/write_to_us"
                        android:gravity="center"
                        android:layout_marginTop="30dp"
                        android:layout_marginBottom="10dp"
                        android:textColor="@color/white"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.google.android.material.textfield.TextInputEditText
                            android:hint="@string/name"
                            android:id="@+id/et_name"
                            android:textSize="14sp"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.google.android.material.textfield.TextInputEditText
                            android:hint="@string/phone_number"
                            android:inputType="number"
                            android:id="@+id/et_number"
                            android:textSize="14sp"
                            android:maxLength="10"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <com.google.android.material.textfield.TextInputEditText
                            android:hint="@string/email_address"
                            android:textSize="14sp"
                            android:id="@+id/et_email"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:visibility="gone"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:background="@drawable/button_background">
                        <Spinner
                            android:id="@+id/spinner"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"/>
                    </FrameLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.google.android.material.textfield.TextInputEditText
                            android:hint="Pincode"
                            android:id="@+id/et_pincoden"
                            android:textSize="14sp"
                            android:inputType="number"
                            android:maxLength="6"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent" />
                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.google.android.material.textfield.TextInputEditText
                            android:hint="Description"
                            android:id="@+id/et_description"
                            android:textSize="14sp"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent" />
                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

        <Button
            android:id="@+id/calldata"
            android:text="Submit"
            android:textColor="@color/white"
            android:background="@drawable/button_background"

            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>


</RelativeLayout>